--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <article class="noticia noticia-destacada">
                         <img class="noticia-img" src="./assets/banda-paul.jpg" alt="banda de paul">
                         <h3 class="noticia-titulo">Nuevo integrante</h3>
-                        <span class="noticia-parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
+                        <span class="noticia-parrafo">Un nuevo musico se unió al cantante. </span>
                         <label class="noticia-fecha">15 de Agosto, 2022</label>
                     </article>
                 </div>
@@ -95,7 +95,7 @@
                     <article class="noticia">
                         <h3 class="noticia-titulo">Viejo conocido</h3>
                         <img class="noticia-img" src="./assets/ringo-y-paul.jpg" alt="ringo y paul">
-                        <span class="noticia-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+                        <span class="noticia-parrafo">Ringo tocó con Paul en México.</span>
                         <label class="noticia-fecha">19 de Abril, 2022</label>
                     </article>
                 </div>
@@ -103,7 +103,7 @@
                     <article class="noticia">
                         <h3 class="noticia-titulo">Cumpleaños</h3>
                         <img class="noticia-img" src="./assets/cumpleanios.png" alt="cumpleaños">
-                        <span class="noticia-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        <span class="noticia-parrafo">Hoy es el cumpleanños nº 75.
                             </class=>
                             <label class="noticia-fecha">10 de Abril, 2022</label>
                     </article>
@@ -112,7 +112,7 @@
                     <article class="noticia">
                         <h3 class="noticia-titulo">Una vieja historia</h3>
                         <img class="noticia-img" src="./assets/john.png" alt="John">
-                        <span class="noticia-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+                        <span class="noticia-parrafo">Cuando Paul conoció a John.</span>
                         <label class="noticia-fecha">11 de Febrero, 2022</label>
                     </article>
                 </div>
@@ -120,7 +120,7 @@
                     <article class="noticia">
                         <h3 class="noticia-titulo">Nuevo tour</h3>
                         <img class="noticia-img" src="./assets/tour.jpg" alt="tour">
-                        <span class="noticia-parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+                        <span class="noticia-parrafo">El bajista anunica un nuevo tour.</span>
                         <label class="noticia-fecha">01 de Febrero, 2022</label>
                     </article>
                 </div>
